<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ev_ic"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_back"
                android:textFontWeight="400"
                style="@style/HeadingStyle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/enter_mob"
                style="@style/HeaderTextStyle"
                android:textFontWeight="400" />
            <TextView
                android:id="@+id/tvMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textFontWeight="400"
                style="@style/TextStyle"/>
            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/border_line"
                android:hint="@string/enter_mob_no"
                android:maxLength="10"
                android:inputType="number"
                android:textFontWeight="400"
                android:maxLines="1"
                style="@style/EditTextStyle"/>
            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:textFontWeight="400"
                style="@style/TextStyle"
                android:layout_marginStart="30dp"
                android:textColor="@color/black" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/hint"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/border_line"
                    android:drawableTint="@color/border_grey"
                    android:imeOptions="flagNoExtractUi"
                    app:hintTextColor="@color/white"
                    android:textFontWeight="400"
                    android:maxLines="1"
                    style="@style/EditTextStyle"
                    android:maxLength="8"
                    android:hint="@string/enter_pass"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:fontFamily="@font/red_hat_display_regular"
                    android:textSize="13dp"
                    android:layout_marginStart="40dp"
                    android:textFontWeight="400"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:fontFamily="@font/red_hat_display_regular"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="13dp" />

            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                style="@style/ButtonStyle"
                android:textFontWeight="600"
                android:textAllCaps="false"
                android:text="@string/login" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    style="@style/TextStyle"
                    android:text="@string/login_with"/>
                <TextView
                    android:id="@+id/tvLoginOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textFontWeight="400"
                    style="@style/TextStyle"
                    android:textColor="@color/blue"
                    android:layout_marginLeft="5dp"
                    android:text="@string/otp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    style="@style/TextStyle"
                    android:text="@string/dont_have_acc"/>
                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textFontWeight="400"
                    style="@style/TextStyle"
                    android:textColor="@color/green"
                    android:layout_marginLeft="10dp"
                    android:text="@string/register"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>