<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/evcharge" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/ItemTextStyle"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textFontWeight="700"
        android:text="@string/find_station_splash"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_gravity="center"
            style="@style/HeaderStyle"
            android:textFontWeight="700"
            android:textColor="@color/black"
            android:text="@string/allow_location"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            style="@style/TextStyle"
            android:textFontWeight="700"
            android:textColor="@color/grey"
            android:text="@string/need_location"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            style="@style/ButtonStyle"
            android:textFontWeight="600"
            android:textAllCaps="false"
            android:text="@string/allow_access" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_cancel"
            android:textFontWeight="600"
            style="@style/WhiteButtonStyle"
            android:textAllCaps="false"
            android:text="@string/dont_allow" />
    </LinearLayout>

</LinearLayout>