<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/pay_img"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            style="@style/WhiteButtonStyle"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_cancel"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textFontWeight="600" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:src="@drawable/locate_img"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        style="@style/HeaderStyle"
        android:textFontWeight="700"
        android:textColor="@color/black"
        android:text="@string/locate"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        style="@style/TextStyle"
        android:textFontWeight="700"
        android:textColor="@color/grey"
        android:text="@string/locate_des"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/screen1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/WhiteButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_cancel"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textFontWeight="600" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:background="@drawable/button"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textFontWeight="600" />

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        style="@style/ButtonStyle"
        android:textFontWeight="600"
        android:textAllCaps="false"
        android:text="@string/create_acc" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_cancel"
        android:textFontWeight="600"
        style="@style/WhiteButtonStyle"
        android:textAllCaps="false"
        android:text="@string/login" />

</LinearLayout>